--- a/docs/pages/index.njk
+++ b/docs/pages/index.njk
@@ -19,10 +19,10 @@ SPDX-License-Identifier: GPL-3.0-only
 	     (minified)
 	 {% endif %}
      </td>
-     <td class="ph2 pv1" title="{{ file.size | formatInteger }} bytes">
+     <td class="ph2 pv1 nowrap" title="{{ file.size | formatInteger }} bytes">
 	 {{ file.sizePretty }}
      </td>
-     <td class="ph2 pv1" title="{{ file.gzipSize | formatInteger}} bytes">
+     <td class="ph2 pv1 nowrap" title="{{ file.gzipSize | formatInteger}} bytes">
 	 {{ file.gzipSizePretty }}
      </td>
      <td class="ph2 pv1">
