--- a/docs/pages/index.njk
+++ b/docs/pages/index.njk
@@ -55,7 +55,7 @@ SPDX-License-Identifier: GPL-3.0-only
 
     {% for file in files %}
 	{% if not file.isRaw and file.name == "c4s" %}
-	    <a class="dib white link bg-blue br-pill lh-solid ph4 pv3 m2 nowrap" href="{{ file.file }}" download>
+	    <a class="dib white link bg-dark-blue br-pill lh-solid ph4 pv3 m2 nowrap" href="{{ file.file }}" download>
 		Download C4S
 
 		{% if file.isMinified %}
