Add background-clip module

--- a/src/_load-modules.scss
+++ b/src/_load-modules.scss
@@ -7,6 +7,7 @@
 @use 'sass:map';
 @use 'variables';
 @use 'mixins';
+@use 'modules/background-clip';
 @use 'modules/background-color';
 @use 'modules/border-color';
 @use 'modules/border-radius';
@@ -68,7 +69,10 @@
   }
 
   @each $module, $responsive in $modules {
-    @if $module == background-color {
+    @if $module == background-clip {
+      @include background-clip.background-clip();
+    }
+    @else if $module == background-color {
       @include background-color.background-color();
     }
     @else if $module == border-color {
@@ -226,7 +230,10 @@
   @each $breakpoint, $map in $breakpoints {
     @include mixins.media-breakpoint-up($breakpoint) {
       @each $module, $responsive in $modules {
-        @if $module == background-color and $responsive {
+        @if $module == background-clip and $responsive {
+          @include background-clip.background-clip($breakpoint);
+        }
+        @else if $module == background-color and $responsive {
           @include background-color.background-color($breakpoint);
         }
         @else if $module == border-color and $responsive {
