--- a/docs/layouts/default.njk
+++ b/docs/layouts/default.njk
@@ -7,38 +7,49 @@ SPDX-License-Identifier: GPL-3.0-only
 <!doctype html>
 <html lang="en">
     <head>
-	<meta charset="utf-8">
-	<title>C4S CSS library documentation</title>
-	<meta name="description" content="{{ description }}">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="/c4s.css?v={{ version | slug }}" rel="stylesheet">
-	<script defer="defer" src="/js/main.js?v={{ version | slug }}"></script>
+        <meta charset="utf-8">
+        <title>C4S CSS library documentation</title>
+        <meta name="description" content="{{ description }}">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/c4s.css?v={{ version | slug }}" rel="stylesheet">
+        <script defer="defer" src="/js/main.js?v={{ version | slug }}"></script>
     </head>
     <body class="sans-serif">
-	<div class="df flex-column min-vh-100">
-	    <div class="js-header sticky w-100 top-0 bg-white bb b--moon-gray transition-transform-medium" style="z-index: 1;">
-		<div class="container-m center p3 pb2">
-		    <div class="df items-center">
-			<a href="/" class="link inherit">
-			    <h1 class="mv0 lh-solid">
-				<span class="tracked-tight">C4S</span>
-				docu&shy;menta&shy;tion
-			    </h1>
-			</a>
-			<span class="dn db-m p3">Version {{ version }}</span>
-		    </div>
-		</div>
-	    </div>
+        <div class="df flex-column min-vh-100">
 
-	    <main class="relative flex-grow-1">
-		<div class="container-m center p3">
-		    {% block content %}{% endblock %}
-		</div>
-	    </main>
+            <!-- Header -->
+            <div class="js-header sticky w-100 top-0 bg-white bb b--moon-gray transition-transform-medium" style="z-index: 1;">
+                <div class="container-m center p3 pb2">
+                    <div class="df items-center">
+                        <a href="/" class="link inherit pr3">
+                            <h1 class="f1 f2-m f1-l mv0 lh-solid nowrap">
+                                <span class="tracked-tight">C4S</span>
+                                <span class="dn-m">docs</span>
+                                <span class="dn di-m">docu&shy;menta&shy;tion</span>
+                            </h1>
+                        </a>
 
-	    {# <footer>
-	    footer
-	    </footer> #}
-	</div>
+                        <span class="dn db-m p3">Version {{ version }}</span>
+
+                        <a href="https://github.com/casdijkman/c4s" class="p3" target="_blank" rel="noreferrer">
+                            <span class="sr-only">Github</span>
+                            <div class="dib svg-wrapper">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512"><title>Github</title><path d="M256,32C132.3,32,32,134.9,32,261.7c0,101.5,64.2,187.5,153.2,217.9a17.56,17.56,0,0,0,3.8.4c8.3,0,11.5-6.1,11.5-11.4,0-5.5-.2-19.9-.3-39.1a102.4,102.4,0,0,1-22.6,2.7c-43.1,0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1,1.4-14.1h.1c22.5,2,34.3,23.8,34.3,23.8,11.2,19.6,26.2,25.1,39.6,25.1a63,63,0,0,0,25.6-6c2-14.8,7.8-24.9,14.2-30.7-49.7-5.8-102-25.5-102-113.5,0-25.1,8.7-45.6,23-61.6-2.3-5.8-10-29.2,2.2-60.8a18.64,18.64,0,0,1,5-.5c8.1,0,26.4,3.1,56.6,24.1a208.21,208.21,0,0,1,112.2,0c30.2-21,48.5-24.1,56.6-24.1a18.64,18.64,0,0,1,5,.5c12.2,31.6,4.5,55,2.2,60.8,14.3,16.1,23,36.6,23,61.6,0,88.2-52.4,107.6-102.3,113.3,8,7.1,15.2,21.1,15.2,42.5,0,30.7-.3,55.5-.3,63,0,5.4,3.1,11.5,11.4,11.5a19.35,19.35,0,0,0,4-.4C415.9,449.2,480,363.1,480,261.7,480,134.9,379.7,32,256,32Z"/></svg>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <main class="relative flex-grow-1">
+                <div class="container-m center p3">
+                    {% block content %}{% endblock %}
+                </div>
+            </main>
+
+            {# <footer>
+                footer
+                </footer> #}
+        </div>
     </body>
 </html>
