--- a/docs/layouts/default.njk
+++ b/docs/layouts/default.njk
@@ -1,10 +1,9 @@
-{#
+<!doctype html>
+<!--!
 SPDX-FileCopyrightText: 2021 Cas Dijkman
 
-SPDX-License-Identifier: GPL-3.0-only
-#}
-
-<!doctype html>
+SPDX-License-Identifier: GFDL-1.3-only
+-->
 <html lang="en">
     <head>
         <meta charset="utf-8">
