--- a/docs/pages/index.njk
+++ b/docs/pages/index.njk
@@ -1,7 +1,7 @@
 {#
 SPDX-FileCopyrightText: 2021 Cas Dijkman
 
-SPDX-License-Identifier: GPL-3.0-only
+SPDX-License-Identifier: GFDL-1.3-only
 #}
 
 {% extends "docs/layouts/default.njk" %}
