Add display contents and display flow-root

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -488,7 +488,9 @@ $displays: (
   'tc': table-cell,
   'f':  flex,
   'if': inline-flex,
-  'g':  grid
+  'g':  grid,
+  'c':  contents,
+  'fr': flow-root
 );
 
 /*
