--- a/src/c4s-custom.scss
+++ b/src/c4s-custom.scss
@@ -491,7 +491,9 @@ $displays: (
   'tc': table-cell,
   'f':  flex,
   'if': inline-flex,
-  'g':  grid
+  'g':  grid,
+  'c':  contents,
+  'fr': flow-root
 );
 
 /*
