--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -99,63 +99,64 @@ $modules: (
  *
  * Used in border-color, background-color, color, hover-background-color and hover-color modules
  */
-$black: #000;
-$white: #fff;
+$black: hsl(0, 0%, 0%);
+$white: hsl(0, 0%, 100%);
+
 $colors: (
   /*
    * Black/gray/white
    */
   'black':         $black,
-  'near-black':    #111,
-  'dark-gray':     #333,
-  'mid-gray':      #555,
-  'gray':          #777,
-  'silver':        #999,
-  'light-silver':  #aaa,
-  'moon-gray':     #ccc,
-  'light-gray':    #eee,
-  'near-white':    #f4f4f4,
+  'near-black':    hsl(0, 0%, 6.7%),
+  'dark-gray':     hsl(0, 0%, 20%),
+  'mid-gray':      hsl(0, 0%, 33.3%),
+  'gray':          hsl(0, 0%, 46.7%),
+  'silver':        hsl(0, 0%, 60%),
+  'light-silver':  hsl(0, 0%, 66.7%),
+  'moon-gray':     hsl(0, 0%, 80%),
+  'light-gray':    hsl(0, 0%, 93.3%),
+  'near-white':    hsl(0, 0%, 95.7%),
   'white':         $white,
   /*
    * Red
    */
-  'dark-red':      #e7040f,
-  'red':           #ff4136,
-  'light-red':     #ff725c,
-  'washed-red':    #ffdfdf,
+  'dark-red':      hsl(357, 96.6%, 46.1%),
+  'red':           hsl(3, 100%, 60.6%),
+  'light-red':     hsl(8, 100%, 68%),
+  'washed-red':    hsl(0, 100%, 93.7%),
   /*
    * Orange/yellow
    */
-  'orange':        #ff6300,
-  'gold':          #ffb700,
-  'yellow':        #ffd700,
-  'light-yellow':  #fbf1a9,
-  'washed-yellow': #fffceb,
+  'orange':        hsl(23, 100%, 50%),
+  'gold':          hsl(43, 100%, 50%),
+  'yellow':        hsl(51, 100%, 50%),
+  'light-yellow':  hsl(53, 91.1%, 82.4%),
+  'washed-yellow': hsl(51, 100%, 96.1%),
   /*
    * Purple/pink
    */
-  'purple':        #5e2ca5,
-  'light-purple':  #a463f2,
-  'dark-pink':     #d5008f,
-  'hot-pink':      #ff41b4,
-  'pink':          #ff80cc,
-  'light-pink':    #ffa3d7,
+  'purple':        hsl(265, 57.9%, 41%),
+  'light-purple':  hsl(267, 84.6%, 66.9%),
+  'dark-pink':     hsl(320, 100%, 41.8%),
+  'hot-pink':      hsl(324, 100%, 62.7%),
+  'pink':          hsl(324, 100%, 75.1%),
+  'light-pink':    hsl(326, 100%, 82%),
   /*
    * Green
    */
-  'dark-green':    #137752,
-  'green':         #19a974,
-  'light-green':   #9eebcf,
-  'washed-green':  #e8fdf5,
+  'dark-green':    hsl(158, 72.5%, 27.1%),
+  'green':         hsl(158, 74.2%, 38%),
+  'light-green':   hsl(158, 65.8%, 77.1%),
+  'washed-green':  hsl(157, 84%, 95.1%),
   /*
    * Blue
    */
-  'navy':          #001b44,
-  'dark-blue':     #00449e,
-  'blue':          #357edd,
-  'light-blue':    #96ccff,
-  'lightest-blue': #cdecff,
-  'washed-blue':   #f6fffe,
+  'navy':          hsl(216, 100%, 13.3%),
+  'dark-blue':     hsl(214, 100%, 31%),
+  'blue':          hsl(214, 71.2%, 53.7%),
+  'light-blue':    hsl(209, 100%, 79.4%),
+  'lightest-blue': hsl(203, 100%, 90.2%),
+  'washed-blue':   hsl(173, 100%, 98.2%),
   /*
    * Black opacity variations
    */
@@ -472,25 +473,27 @@ $debug-grids: (
 $debug-striped-name: debug-striped;
 $debug-striped-items: (
   '':      [ map.get($colors, 'black-025'), map.get($colors, 'black-05') ],
-  'light': [ map.get($colors, 'black-025'), transparent ]
+  'light': [ map.get($colors, 'black-025'), transparent ],
+  'black': [ map.get($colors, 'black'), transparent ]
 );
 
 /*
  * Display
  */
-$display-prefix: d;
 $displays: (
-  'b':  block,
-  'i':  inline,
-  'ib': inline-block,
-  'n':  none,
-  't':  table,
-  'tc': table-cell,
-  'f':  flex,
-  'if': inline-flex,
-  'g':  grid,
-  'c':  contents,
-  'fr': flow-root
+  'db':   block,
+  'di':   inline,
+  'dib':  inline-block,
+  'dn':   none,
+  'dt':   table,
+  'dtc':  table-cell,
+  'df':   flex,
+  'flex': flex,
+  'dif':  inline-flex,
+  'dg':   grid,
+  'grid': grid,
+  'dc':   contents,
+  'dfr':  flow-root
 );
 
 /*
