--- a/docs/pages/docs/example.njk
+++ b/docs/pages/docs/example.njk
@@ -71,7 +71,7 @@ SPDX-License-Identifier: GFDL-1.3-only
      }
     </style>
 
-    <div class="js-sticky df flex-nowrap sticky bg-white overflow-x-auto transition-medium  z-1" style="top: var(--header-height);">
+    <div class="js-example-links js-sticky df flex-nowrap sticky bg-white overflow-x-auto transition-medium  z-1" style="top: var(--header-height);">
         <a href="#top" class="link black p3 bl-between bb b--moon-gray nowrap">
             &uarr;
             <span class="sr-only">To top</span>
@@ -96,7 +96,7 @@ SPDX-License-Identifier: GFDL-1.3-only
                     </h2>
 
                     <details>
-                        <summary class="p2 cursor-pointer user-select-none">
+                        <summary class="p2 cursor-pointer user-select-none" data-module="{{ file.name }}">
                             More information
                         </summary>
 
