--- a/src/modules/_miscellaneous.scss
+++ b/src/modules/_miscellaneous.scss
@@ -11,7 +11,7 @@
   $global-prefix: variables.$global-prefix;
 
   #{functions.construct-class-name($global-prefix, list-reset, $media)} {
-    list-style: none;
+    list-style-type: none;
     padding-left: 0;
     margin-top: 0;
     margin-bottom: 0;
