Replace {{ VERSION }} string in c4s-custom.scss

--- a/docs/layouts/default.njk
+++ b/docs/layouts/default.njk
@@ -10,8 +10,8 @@
         <title>C4S CSS library documentation</title>
         <meta name="description" content="{{ description }}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/c4s.css?v={{ version | slug }}" rel="stylesheet">
-        <script defer="defer" src="/js/main.js?v={{ version | slug }}"></script>
+        <link href="/c4s.css?v={{ VERSION | slug }}" rel="stylesheet">
+        <script defer="defer" src="/js/main.js?v={{ VERSION | slug }}"></script>
     </head>
     <body class="sans-serif">
         <div class="df flex-column min-vh-100">
@@ -27,7 +27,7 @@
                                 <span class="dn di-l">docu&shy;menta&shy;tion</span>
                             </h1>
 
-                            <span class="dn di-l p3">Version {{ version }}</span>
+                            <span class="dn di-l p3">Version {{ VERSION }}</span>
                         </a>
 
                         <a href="https://github.com/casdijkman/c4s" class="df items-center link black p3" target="_blank" rel="noreferrer">
