--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,5 @@
 /*!
- * C4S CSS, version {{ version }} <https://c4s.website>
+ * C4S CSS, version {{ VERSION }} <https://c4s.website>
  * SPDX-FileCopyrightText: 2021 Cas Dijkman
  * SPDX-License-Identifier: GPL-3.0-only
  */
