Improve resets for img and scroll-behavior smooth

--- a/src/modules/_debug.scss
+++ b/src/modules/_debug.scss
@@ -14,7 +14,7 @@
   $global-prefix: variables.$global-prefix;
 
   /*
-   * Credit to Adam Morse from Tachyons for the debug grids and outlines
+   * Credit to Adam Morse and John Otander from Tachyons for the debug grids and outlines
    * See http://tachyons.io/docs/debug-grid/ and http://tachyons.io/docs/debug/
    */
   $grid-name: variables.$debug-grid-name;
