Change prevent reset class

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -908,7 +908,7 @@ $positions: (
 /*
  * Reset
  */
-$prevent-reset-class: 'prevent';
+$prevent-reset-class: 'no-reset';
 $document-bg-color: null;
 $enable-smooth-scroll: true;
 $force-smooth-scroll: false;
