--- a/src/c4s-custom.scss
+++ b/src/c4s-custom.scss
@@ -671,8 +671,11 @@ $number-of-columns: 12;
 $columns: ('auto': auto);
 
 @for $i from 1 through $number-of-columns {
-  $current-column: ('#{$i}': math.div(100%, $number-of-columns) * $i);
-  $columns: map.merge($columns, $current-column);
+  $columns-per-row: math.div($number-of-columns, $i);
+  $width: math.div(100%, $number-of-columns) * $i;
+  $width-with-gap:
+    calc($width - var(--column-gap, 0px) + var(--column-gap, 0px) / $columns-per-row);
+  $columns: map.merge($columns, ('#{$i}': $width-with-gap));
 }
 
 /*
@@ -903,7 +906,7 @@ $positions: (
 /*
  * Reset
  */
-$prevent-reset-class: 'prevent';
+$prevent-reset-class: 'no-reset';
 $document-bg-color: null;
 $enable-smooth-scroll: true;
 $force-smooth-scroll: false;
